--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,11 @@ dependencies {
     compile "com.amazonaws:aws-java-sdk-s3:1.11.172"
     compile "io.minio:minio:3.0.10"
 
+    compile "org.springframework.security:spring-security-config:$springSecurityVersion"
+    compile "org.springframework.security:spring-security-web:$springSecurityVersion"
+    compile "org.thymeleaf.extras:thymeleaf-extras-springsecurity3:2.1.1.RELEASE"
+    compile "org.springframework.ldap:spring-ldap-core:2.0.1.RELEASE"
+    
     compile ("org.apache.tiles:tiles-core:$tilesVersion") {
         exclude group: 'org.slf4j'
     }
