--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     compile "org.hibernate:hibernate-core:$hibernateVersion"
     compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
     compile "org.hibernate:hibernate-entitymanager:$hibernateEntityManagerVersion"
-    compile "org.springframework.data:spring-data-mongodb:1.5.2.RELEASE"
+    compile "org.springframework.data:spring-data-mongodb:1.3.2.RELEASE"
+    //spring data组件的版本号要一致
     compile "org.mongodb:mongo-java-driver:2.11.3"
     compile "org.apache.commons:commons-lang3:$commonsLangVersion"
     compile "org.thymeleaf:thymeleaf-spring4:$thymeleafVersion"
