--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,11 @@ dependencies {
     compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
     compile "org.hibernate:hibernate-entitymanager:$hibernateEntityManagerVersion"
     compile "org.springframework.data:spring-data-mongodb:1.3.2.RELEASE"
+    compile("org.springframework.data:spring-data-redis:1.3.2.RELEASE")
     //spring data组件的版本号要一致
     compile "org.mongodb:mongo-java-driver:2.11.3"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.4.1.3"
+    compile "redis.clients:jedis:2.5.2"
     compile "org.apache.commons:commons-lang3:$commonsLangVersion"
     compile "org.thymeleaf:thymeleaf-spring4:$thymeleafVersion"
     compile "org.slf4j:slf4j-api:$slf4jVersion"
