add: ActiveMQ, chapter 17

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile "org.springframework:spring-webmvc:$springVersion"
     compile "org.springframework:spring-jdbc:$springVersion"
     compile "org.springframework:spring-orm:$springVersion"
+    compile "org.springframework:spring-jms:$springVersion"
     compile "org.springframework.data:spring-data-jpa:$springDataJpaVersion"
     compile "com.h2database:h2:$h2Version"
     compile "org.hibernate:hibernate-core:$hibernateVersion"
@@ -45,11 +46,13 @@ dependencies {
     compile "com.amazonaws:aws-java-sdk-s3:1.11.172"
     compile "io.minio:minio:3.0.10"
     compile "mysql:mysql-connector-java:8.0.11"
+    compile "org.apache.activemq:activemq-spring:$activeMQVersion"
     compile "org.apache.commons:commons-dbcp2:2.6.0"
     compile "org.springframework.security:spring-security-config:$springSecurityVersion"
     compile "org.springframework.security:spring-security-web:$springSecurityVersion"
     compile "org.springframework.security:spring-security-taglibs:$springSecurityVersion"
     compile "javax.inject:javax.inject:1"
+    ompile "org.apache.xbean:xbean-spring:3.7"
     compile "org.thymeleaf.extras:thymeleaf-extras-springsecurity3:2.1.1.RELEASE"
     compile "org.springframework.ldap:spring-ldap-core:2.0.1.RELEASE"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
