--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,13 @@ dependencies {
     compile "org.springframework:spring-jdbc:$springVersion"
     compile "org.springframework:spring-orm:$springVersion"
     compile "org.springframework:spring-jms:$springVersion"
+
+    compile "org.springframework:spring-web:$springVersion"
+    compile "org.springframework:spring-websocket:$springVersion"
+    compile "org.springframework:spring-messaging:$springVersion"
+    compile "org.springframework:spring-context:$springVersion"
+    compile "org.projectreactor:reactor-tcp:1.0.0.RELEASE"
+
     compile "org.springframework.data:spring-data-jpa:$springDataJpaVersion"
     compile "org.springframework.amqp:spring-amqp:$springAMQPVersion"
     compile "org.springframework.amqp:spring-rabbit:$springAMQPVersion"
@@ -64,7 +71,10 @@ dependencies {
     compile ("org.apache.tiles:tiles-jsp:$tilesVersion") {
         exclude group: 'org.slf4j'
     }
-
+    compile "org.webjars:jquery:2.0.3-1"
+    compile "org.webjars:sockjs-client:0.3.4"
+    compile "org.webjars:stomp-websocket:2.3.0"
+    
     compile "javax.servlet:jstl:$jstlVersion"
     compile "javax.servlet:javax.servlet-api:$servletApiVersion"
     compile "javax.servlet.jsp:jsp-api:$jspApiVersion"
