--- a/build.gradle
+++ b/build.gradle
@@ -84,4 +84,10 @@ dependencies {
     compile "org.springframework:spring-test:$springVersion"
     compile "org.mockito:mockito-core:$mockitoVersion"
     compile "org.hamcrest:hamcrest-library:$hamcrestVersion"
+//learn-mybatis
+    compile 'org.mybatis:mybatis:3.5.1'
+    
+    compile 'org.mybatis:mybatis-spring:2.0.2'
+    compile 'org.mybatis.generator:mybatis-generator-core:1.3.3'
+
 }
