--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=TRACE,stdout
+log4j.rootCategory=DEBUG,stdout
 
 #log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 #log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -14,9 +14,9 @@ log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,S
 #log4j.logger.com.ibatis.common.jdbc.ScriptRunner=INFO
 #log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=INFO
 log4j.logger.noModule=FATAL
-log4j.logger.org.mybatis.jpetstore=TRACE
+log4j.logger.org.mybatis.jpetstore=DEBUG
 log4j.logger.com.opensymphony.xwork2=DEBUG
-log4j.logger.com.ibatis=TRACE
+log4j.logger.com.ibatis=DEBUG
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
 log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
