--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,10 @@
-log4j.rootCategory=DEBUG,stdout
+log4j.rootCategory=INFO,stdout
 
 #log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 #log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %40.40c:%4L - %m%n
 
+log4j.logger.mbg.dao=trace
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
@@ -13,18 +14,6 @@ log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,S
 #log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=INFO
 #log4j.logger.com.ibatis.common.jdbc.ScriptRunner=INFO
 #log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=INFO
-log4j.logger.noModule=FATAL
-log4j.logger.org.mybatis.jpetstore=DEBUG
-log4j.logger.com.opensymphony.xwork2=DEBUG
-log4j.logger.com.ibatis=DEBUG
-log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
-log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
-log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
-log4j.logger.org.mybatis=DEBUG
-log4j.logger.java.sql=DEBUG
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.Statement=DEBUG
-log4j.logger.java.sql.PreparedStatement=DEBUG
-log4j.logger.java.sql.ResultSet=DEBUG
+
 
 
