--- a/build.gradle
+++ b/build.gradle
@@ -90,4 +90,8 @@ dependencies {
     compile 'org.mybatis:mybatis-spring:2.0.2'
     compile 'org.mybatis.generator:mybatis-generator-core:1.3.3'
 
+    //JWT
+    compile 'io.jsonwebtoken:jjwt-impl:0.10.6'
+    compile 'io.jsonwebtoken:jjwt-api:0.10.6'
+    compile 'io.jsonwebtoken:jjwt-jackson:0.10.6'
 }
