--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,9 @@ dependencies {
     compile "org.springframework.amqp:spring-amqp:$springAMQPVersion"
     compile "org.springframework.amqp:spring-rabbit:$springAMQPVersion"
     compile "com.h2database:h2:$h2Version"
-    compile "org.hibernate:hibernate-core:$hibernateVersion"
+    compile "org.hibernate:hibernate-core:$hibernateVersion" {
+        exclude group: 'org.javassist'
+    }
     compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
     compile "org.hibernate:hibernate-entitymanager:$hibernateEntityManagerVersion"
     compile "org.springframework.data:spring-data-mongodb:1.3.2.RELEASE"
@@ -94,4 +96,6 @@ dependencies {
     compile 'io.jsonwebtoken:jjwt-impl:0.10.6'
     compile 'io.jsonwebtoken:jjwt-api:0.10.6'
     compile 'io.jsonwebtoken:jjwt-jackson:0.10.6'
+
+    compile 'org.javassist:javassist:3.23.2-GA'
 }
