--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,7 @@ dependencies {
     compile "org.springframework.amqp:spring-amqp:$springAMQPVersion"
     compile "org.springframework.amqp:spring-rabbit:$springAMQPVersion"
     compile "com.h2database:h2:$h2Version"
-    compile "org.hibernate:hibernate-core:$hibernateVersion" {
-        exclude group: 'org.javassist'
-    }
+    compile "org.hibernate:hibernate-core:$hibernateVersion" 
     compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
     compile "org.hibernate:hibernate-entitymanager:$hibernateEntityManagerVersion"
     compile "org.springframework.data:spring-data-mongodb:1.3.2.RELEASE"
