--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     compile "org.springframework:spring-orm:$springVersion"
     compile "org.springframework:spring-jms:$springVersion"
 
+    compile "org.aspectj:aspectjweaver:$aspectJVersion"
+    compile "org.springframework:spring-aop:$springVersion"
+
     compile "org.springframework:spring-web:$springVersion"
     compile "org.springframework:spring-websocket:$springVersion"
     compile "org.springframework:spring-messaging:$springVersion"
